tests/paczka2/big_fuzzy/26728461.err
Error in line 5: UZu4 A705 44,0
Error in line 6: qDgZ5E S561 71,0
Error in line 22: S561 S561 97,0
Error in line 23: iOOSz7t9rm A705 22,0
Error in line 26: S561 A127 51,3
Error in line 49: XBKu93bbr S710 92,2
Error in line 43: UZu4 S561 6,8
Error in line 54: UZu4 A127 48,8
Error in line 55: UZu4 S710 94,8
Error in line 57: XBKu93bbr S561 2,8
Error in line 58: XBKu93bbr A127 75,0
Error in line 44: aPG S561 20,2
Error in line 36: qDgZ5E S561 19,0
Error in line 60: aPG S710 30,7
Error in line 51: iOOSz7t9rm S710 89,4
Error in line 72: aPG A127 58,8
Error in line 76: XwXvBzi2Ivf A705 328,0
Error in line 78: XwXvBzi2Ivf S561 68,4
Error in line 101: aPG S710 59,0
Error in line 113: aPG A705 99,4
Error in line 123: S561 S710 37,8
Error in line 130: aPG A127 45,25
Error in line 146: XwXvBzi2Ivf A705 2,9
Error in line 151: XBKu93bbr A127 17,1
Error in line 133: iOOSz7t9rm S710 409,4
Error in line 159: iOOSz7t9rm A127 16,8
Error in line 163: aPG A12Ð 3Ð,9
Error in line 169: UZu4 A705 84,6
Error in line 166: aPG S561 188,8
Error in line 188: UZu4 A127 0,9
Error in line 187: qDgZ5E A127 51,2
Error in line 205: aPG S561 53,00
Error in line 202: iOOSz7t9rm A127 186,6
Error in line 197: aPG S561 27,8
Error in line 221: aPG A127 44,7
Error in line 225: qDgZ5E A705 15,5
Error in line 220: UZu4 A705 31,3
Error in line 236: iOOSz7t9rm A127 64,2
Error in line 233: aPG A127 8,6
